@@ -107,4 +107,3 @@ bench:
 are-kibana-objects-updated: python-env
 	@$(MAKE) clean update
 	@$(PYTHON_ENV)/bin/python ./script/are_kibana_saved_objects_updated.py ${BEATS_VERSION}
-
