@@ -1,0 +1,22 @@
+[{
+  "id": "apm_user_agent",
+  "body": {
+    "description" : "Add user agent information for APM events",
+    "processors" : [
+      {
+        "user_agent" : {
+          "field": "context.request.headers.user-agent",
+          "target_field": "context.request.headers.user_agent",
+          "ignore_missing": true
+        }
+      },
+      {
+        "user_agent" : {
+          "field": "context.user.user-agent",
+          "target_field": "context.user.user_agent",
+          "ignore_missing": true
+        }
+      }
+    ]
+  }
+}]
