@@ -6,6 +6,7 @@ from apmserver import ClientSideBaseTest, SmapIndexBaseTest, SmapCacheBaseTest
 from apmserver import SplitIndicesTest
 from beat.beat import INTEGRATION_TESTS
 import json
+import time
 
 
 class Test(ElasticTest):
@@ -507,7 +508,7 @@ class ExpvarCustomUrlIntegrationTest(ExpvarBaseTest):
         assert r.status_code == 200, r.status_code
 
 
-class MetricsIntegrationTest(Test):
+class MetricsIntegrationTest(ElasticTest):
     def all_metrics_docs(self):
         return self.es.search(index=self.index_name,
                               body={"query": {"term": {"processor.event": "metric"}}})
@@ -519,3 +520,41 @@ class MetricsIntegrationTest(Test):
         expected_type = "scaled_float"
         actual_type = mappings[self.index_name]["mappings"]["doc"]["system.process.cpu.total.norm.pct"]["mapping"]["pct"]["type"]
         assert expected_type == actual_type, "want: {}, got: {}".format(expected_type, actual_type)
+
+
+class PipelineRegisterTest(ElasticTest):
+    config_overrides = {
+        "register_pipeline_enabled": "true",
+        "register_pipeline_overwrite": "true"
+    }
+
+    @unittest.skipUnless(INTEGRATION_TESTS, "integration test")
+    def test_default_pipeline_registered(self):
+        pipeline_id = "apm_user_agent"
+        default_desc = "Add user agent information for APM events"
+        loaded_msg = "Pipeline successfully registered"
+        self.wait_until(lambda: self.log_contains(loaded_msg),
+                        max_timeout=5)
+        pipeline = self.es.ingest.get_pipeline(id=pipeline_id)
+        assert pipeline[pipeline_id]['description'] == default_desc
+
+
+class PipelineDisableOverwriteTest(ElasticTest):
+    config_overrides = {
+        "register_pipeline_enabled": "true",
+        "register_pipeline_overwrite": "false"
+    }
+
+    @unittest.skipUnless(INTEGRATION_TESTS, "integration test")
+    def test_pipeline_not_overwritten(self):
+        loaded_msg = "Pipeline already registered"
+        self.wait_until(lambda: self.log_contains(loaded_msg),
+                        max_timeout=5)
+
+
+class PipelineDisableTest(ElasticTest):
+    @unittest.skipUnless(INTEGRATION_TESTS, "integration test")
+    def test_pipeline_not_registered(self):
+        loaded_msg = "No pipeline callback registered"
+        self.wait_until(lambda: self.log_contains(loaded_msg),
+                        max_timeout=5)
